Fix shelf nav position on mobile

--- a/_less/components.less
+++ b/_less/components.less
@@ -318,4 +318,8 @@ label {
   background-color: @brand-dark;
 }
 
+// Fix Mobile Nav Shelf
 
+.stage-shelf {
+  position: fixed;
+}
